// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactResponsiveVideo Tag "iframe" Video component with Vimeo 1`] = `
<div
  className="css-k008qs"
>
  
  <iframe
    allow="autoplay; fullscreen"
    allowFullScreen={true}
    className="css-0"
    frameBorder="0"
    height="auto"
    margin={0}
    src="https://vimeo.com/366333472?autoplay=1&loop=1&muted=1&autopause=0"
    width="100%"
  />
</div>
`;

exports[`ReactResponsiveVideo Tag "video" Video component with HTTP streaming 1`] = `
<div
  className="css-k008qs"
>
  <video
    autoPlay={true}
    className="css-0"
    controls={false}
    loop={true}
    m3u8="https://player.vimeo.com/external/375031697.m3u8?s=326616eb51bb4e8c17bc634da4fd784c2a700c9e"
    mp4=""
    muted={true}
    ogg=""
    playsInline={true}
    poster=""
    preload="true"
    webm=""
    width="100%"
  >
    
    
    
    <source
      className="css-0"
      src="https://player.vimeo.com/external/375031697.m3u8?s=326616eb51bb4e8c17bc634da4fd784c2a700c9e"
      type="application/x-mpegURL"
    />
  </video>
  
</div>
`;

exports[`ReactResponsiveVideo Tag "video" Video component with mp4 1`] = `
<div
  className="css-k008qs"
>
  <video
    autoPlay={true}
    className="css-0"
    controls={false}
    loop={true}
    m3u8=""
    mp4="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
    muted={true}
    ogg=""
    playsInline={true}
    poster=""
    preload="true"
    webm=""
    width="100%"
  >
    <source
      className="css-0"
      src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"
      type="video/mp4"
    />
    
    
    
  </video>
  
</div>
`;

exports[`ReactResponsiveVideo Tag "video" Video component with ogg 1`] = `
<div
  className="css-k008qs"
>
  <video
    autoPlay={true}
    className="css-0"
    controls={false}
    loop={true}
    m3u8=""
    mp4=""
    muted={true}
    ogg="http://techslides.com/demos/sample-videos/small.ogv"
    playsInline={true}
    poster=""
    preload="true"
    webm=""
    width="100%"
  >
    
    <source
      className="css-0"
      src="http://techslides.com/demos/sample-videos/small.ogv"
      type="video/ogg"
    />
    
    
  </video>
  
</div>
`;

exports[`ReactResponsiveVideo Tag "video" Video component with responsive wrapper and mp4 1`] = `
<div
  className="css-mqrn5k"
>
  <video
    autoPlay={true}
    className="css-1oh3jdm"
    controls={false}
    loop={true}
    m3u8=""
    mp4="http://techslides.com/demos/sample-videos/small.mp4"
    muted={true}
    ogg=""
    playsInline={true}
    poster=""
    preload="true"
    webm=""
    width="100%"
  >
    <source
      className="css-0"
      src="http://techslides.com/demos/sample-videos/small.mp4"
      type="video/mp4"
    />
    
    
    
  </video>
  
</div>
`;

exports[`ReactResponsiveVideo Tag "video" Video component with webm 1`] = `
<div
  className="css-k008qs"
>
  <video
    autoPlay={true}
    className="css-0"
    controls={false}
    loop={true}
    m3u8=""
    mp4=""
    muted={true}
    ogg=""
    playsInline={true}
    poster=""
    preload="true"
    webm="http://techslides.com/demos/sample-videos/small.webm"
    width="100%"
  >
    
    
    <source
      className="css-0"
      src="http://techslides.com/demos/sample-videos/small.webm"
      type="video/webm"
    />
    
  </video>
  
</div>
`;

exports[`Vimeo renders correctly 1`] = `ReactWrapper {}`;
